# QT_learn

./: README.md
QTimer/QTimerM/: main.cpp  widget.cpp  widget.h  widget.ui
calculator/: CMakeLists.txt  README.md  widget.cpp  widget.h
